--- a/WebContent/html_files/PaginaPrincipal.html
+++ b/WebContent/html_files/PaginaPrincipal.html
@@ -32,24 +32,22 @@
 <!--Game Board-->
 <div id="divBoard" class="vertical-block">
 
-    <table border="2" class="board">
+    <table border="2" >
         <tbody class="board">
         <tr>
-
-
             <!--the N piles on the board-->
             <td>
                 <div id="pile1" class="pile"> <!--the pile-->
 
                     <!--the N elements inside the pile-->
                     <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
+                    <input class="playable" type="checkbox" name="1_2" value="" >
+                    <input class="playable" type="checkbox" name="1_3" value="" >
+                    <input class="playable" type="checkbox" name="1_4" value="" >
+                    <input class="playable" type="checkbox" name="1_5" value="" >
+                    <input class="playable" type="checkbox" name="1_6" value="" >
+                    <input class="playable" type="checkbox" name="1_7" value="" >
+                    <input class="playable" type="checkbox" name="1_8" value="" >
                 </div>
             </td>
 
@@ -57,14 +55,14 @@
                 <div id="pile2" class="pile"> <!--the pile-->
 
                     <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
+                    <input class="playable" type="checkbox" name="2_1" value="" >
+                    <input class="playable" type="checkbox" name="2_2" value="" >
+                    <input class="playable" type="checkbox" name="2_3" value="" >
+                    <input class="playable" type="checkbox" name="2_4" value="" >
+                    <input class="playable" type="checkbox" name="2_5" value="" >
+                    <input class="playable" type="checkbox" name="2_6" value="" >
+                    <input class="playable" type="checkbox" name="2_7" value="" >
+                    <input class="playable" type="checkbox" name="2_8" value="" >
                 </div>
             </td>
 
@@ -72,14 +70,14 @@
                 <div id="pile3" class="pile"> <!--the pile-->
 
                     <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
+                    <input class="playable" type="checkbox" name="3_1" value="" >
+                    <input class="playable" type="checkbox" name="3_2" value="" >
+                    <input class="playable" type="checkbox" name="3_3" value="" >
+                    <input class="playable" type="checkbox" name="3_4" value="" >
+                    <input class="playable" type="checkbox" name="3_5" value="" >
+                    <input class="playable" type="checkbox" name="3_6" value="" >
+                    <input class="playable" type="checkbox" name="3_7" value="" >
+                    <input class="playable" type="checkbox" name="3_8" value="" >
                 </div>
             </td>
 
@@ -87,14 +85,14 @@
                 <div id="pile4" class="pile"> <!--the pile-->
 
                     <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
+                    <input class="playable" type="checkbox" name="4_1" value="" >
+                    <input class="playable" type="checkbox" name="4_2" value="" >
+                    <input class="playable" type="checkbox" name="4_3" value="" >
+                    <input class="playable" type="checkbox" name="4_4" value="" >
+                    <input class="playable" type="checkbox" name="4_5" value="" >
+                    <input class="playable" type="checkbox" name="4_6" value="" >
+                    <input class="playable" type="checkbox" name="4_7" value="" >
+                    <input class="playable" type="checkbox" name="4_8" value="" >
                 </div>
             </td>
 
@@ -102,14 +100,14 @@
                 <div id="pile5" class="pile"> <!--the pile-->
 
                     <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_1" value="" >
+                    <input class="playable" type="checkbox" name="5_1" value="" >
+                    <input class="playable" type="checkbox" name="5_2" value="" >
+                    <input class="playable" type="checkbox" name="5_3" value="" >
+                    <input class="playable" type="checkbox" name="5_4" value="" >
+                    <input class="playable" type="checkbox" name="5_5" value="" >
+                    <input class="playable" type="checkbox" name="5_6" value="" >
+                    <input class="playable" type="checkbox" name="5_7" value="" >
+                    <input class="playable" type="checkbox" name="5_8" value="" >
 
                 </div>
             </td>
@@ -118,6 +116,8 @@
         </tbody>
     </table>
 
+    <button class="start-button" id="btnStart">Start!</button>
+    <button class="start-button" id="btnRandomPlay">RANDOM PLAY</button>
 </div>
 
 <!--Windowns-->
@@ -169,5 +169,6 @@
 <script type="text/javascript" src="../javascript_files/loginMethods.js"></script>
 <script type="text/javascript" src="../javascript_files/rulesMethods.js"></script>
 <script type="text/javascript" src="../javascript_files/configMethods.js"></script>
+<script type="text/javascript" src="../javascript_files/playMethods.js"></script>
 
 </html>
