- Computer plays (random) - Alerts of turns

--- a/WebContent/html_files/PaginaPrincipal.html
+++ b/WebContent/html_files/PaginaPrincipal.html
@@ -116,8 +116,9 @@
         </tbody>
     </table>
 
+    <h3 class="normal-text" id="txtMessage"></h3>
+
     <button class="start-button" id="btnStart">Start!</button>
-    <button class="start-button" id="btnRandomPlay">RANDOM PLAY</button>
 </div>
 
 <!--Windowns-->
