--- a/WebContent/html_files/PaginaPrincipal.html
+++ b/WebContent/html_files/PaginaPrincipal.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
 
     <!--Links to CSS files-->
     <link rel="stylesheet" type="text/css" href="../css_files/styles.css">
     <link rel="stylesheet" type="text/css" href="../css_files/loginStyle.css">
     <link rel="stylesheet" type="text/css" href="../css_files/rulesStyle.css">
     <link rel="stylesheet" type="text/css" href="../css_files/configStyle.css">
+    <link rel="stylesheet" type="text/css" href="../css_files/rankingStyle.css">
 
     <title>Nim</title> <!--tab title-->
 </head>
@@ -30,94 +31,95 @@
 </div>
 
 <!--Game Board-->
-<div id="divBoard" class="vertical-block">
+<div class="vertical-block">
+    <div id="divBoard" >
 
-    <table border="2" >
-        <tbody class="board">
-        <tr>
-            <!--the N piles on the board-->
-            <td>
-                <div id="pile1" class="pile"> <!--the pile-->
+        <table class="boardtable" border="2" >
+            <tbody class="board">
+            <tr>
+                <!--the N piles on the board-->
+                <td>
+                    <div id="pile1" class="pile"> <!--the pile-->
 
-                    <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="1_1" value="" >
-                    <input class="playable" type="checkbox" name="1_2" value="" >
-                    <input class="playable" type="checkbox" name="1_3" value="" >
-                    <input class="playable" type="checkbox" name="1_4" value="" >
-                    <input class="playable" type="checkbox" name="1_5" value="" >
-                    <input class="playable" type="checkbox" name="1_6" value="" >
-                    <input class="playable" type="checkbox" name="1_7" value="" >
-                    <input class="playable" type="checkbox" name="1_8" value="" >
-                </div>
-            </td>
+                        <!--the N elements inside the pile-->
+                        <input class="playable" type="checkbox" name="1_1" value="" >
+                        <input class="playable" type="checkbox" name="1_2" value="" >
+                        <input class="playable" type="checkbox" name="1_3" value="" >
+                        <input class="playable" type="checkbox" name="1_4" value="" >
+                        <input class="playable" type="checkbox" name="1_5" value="" >
+                        <input class="playable" type="checkbox" name="1_6" value="" >
+                        <input class="playable" type="checkbox" name="1_7" value="" >
+                        <input class="playable" type="checkbox" name="1_8" value="" >
+                    </div>
+                </td>
 
-            <td>
-                <div id="pile2" class="pile"> <!--the pile-->
+                <td>
+                    <div id="pile2" class="pile"> <!--the pile-->
 
-                    <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="2_1" value="" >
-                    <input class="playable" type="checkbox" name="2_2" value="" >
-                    <input class="playable" type="checkbox" name="2_3" value="" >
-                    <input class="playable" type="checkbox" name="2_4" value="" >
-                    <input class="playable" type="checkbox" name="2_5" value="" >
-                    <input class="playable" type="checkbox" name="2_6" value="" >
-                    <input class="playable" type="checkbox" name="2_7" value="" >
-                    <input class="playable" type="checkbox" name="2_8" value="" >
-                </div>
-            </td>
+                        <!--the N elements inside the pile-->
+                        <input class="playable" type="checkbox" name="2_1" value="" >
+                        <input class="playable" type="checkbox" name="2_2" value="" >
+                        <input class="playable" type="checkbox" name="2_3" value="" >
+                        <input class="playable" type="checkbox" name="2_4" value="" >
+                        <input class="playable" type="checkbox" name="2_5" value="" >
+                        <input class="playable" type="checkbox" name="2_6" value="" >
+                        <input class="playable" type="checkbox" name="2_7" value="" >
+                        <input class="playable" type="checkbox" name="2_8" value="" >
+                    </div>
+                </td>
 
-            <td>
-                <div id="pile3" class="pile"> <!--the pile-->
+                <td>
+                    <div id="pile3" class="pile"> <!--the pile-->
 
-                    <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="3_1" value="" >
-                    <input class="playable" type="checkbox" name="3_2" value="" >
-                    <input class="playable" type="checkbox" name="3_3" value="" >
-                    <input class="playable" type="checkbox" name="3_4" value="" >
-                    <input class="playable" type="checkbox" name="3_5" value="" >
-                    <input class="playable" type="checkbox" name="3_6" value="" >
-                    <input class="playable" type="checkbox" name="3_7" value="" >
-                    <input class="playable" type="checkbox" name="3_8" value="" >
-                </div>
-            </td>
+                        <!--the N elements inside the pile-->
+                        <input class="playable" type="checkbox" name="3_1" value="" >
+                        <input class="playable" type="checkbox" name="3_2" value="" >
+                        <input class="playable" type="checkbox" name="3_3" value="" >
+                        <input class="playable" type="checkbox" name="3_4" value="" >
+                        <input class="playable" type="checkbox" name="3_5" value="" >
+                        <input class="playable" type="checkbox" name="3_6" value="" >
+                        <input class="playable" type="checkbox" name="3_7" value="" >
+                        <input class="playable" type="checkbox" name="3_8" value="" >
+                    </div>
+                </td>
 
-            <td>
-                <div id="pile4" class="pile"> <!--the pile-->
+                <td>
+                    <div id="pile4" class="pile"> <!--the pile-->
 
-                    <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="4_1" value="" >
-                    <input class="playable" type="checkbox" name="4_2" value="" >
-                    <input class="playable" type="checkbox" name="4_3" value="" >
-                    <input class="playable" type="checkbox" name="4_4" value="" >
-                    <input class="playable" type="checkbox" name="4_5" value="" >
-                    <input class="playable" type="checkbox" name="4_6" value="" >
-                    <input class="playable" type="checkbox" name="4_7" value="" >
-                    <input class="playable" type="checkbox" name="4_8" value="" >
-                </div>
-            </td>
+                        <!--the N elements inside the pile-->
+                        <input class="playable" type="checkbox" name="4_1" value="" >
+                        <input class="playable" type="checkbox" name="4_2" value="" >
+                        <input class="playable" type="checkbox" name="4_3" value="" >
+                        <input class="playable" type="checkbox" name="4_4" value="" >
+                        <input class="playable" type="checkbox" name="4_5" value="" >
+                        <input class="playable" type="checkbox" name="4_6" value="" >
+                        <input class="playable" type="checkbox" name="4_7" value="" >
+                        <input class="playable" type="checkbox" name="4_8" value="" >
+                    </div>
+                </td>
 
-            <td>
-                <div id="pile5" class="pile"> <!--the pile-->
+                <td>
+                    <div id="pile5" class="pile"> <!--the pile-->
 
-                    <!--the N elements inside the pile-->
-                    <input class="playable" type="checkbox" name="5_1" value="" >
-                    <input class="playable" type="checkbox" name="5_2" value="" >
-                    <input class="playable" type="checkbox" name="5_3" value="" >
-                    <input class="playable" type="checkbox" name="5_4" value="" >
-                    <input class="playable" type="checkbox" name="5_5" value="" >
-                    <input class="playable" type="checkbox" name="5_6" value="" >
-                    <input class="playable" type="checkbox" name="5_7" value="" >
-                    <input class="playable" type="checkbox" name="5_8" value="" >
+                        <!--the N elements inside the pile-->
+                        <input class="playable" type="checkbox" name="5_1" value="" >
+                        <input class="playable" type="checkbox" name="5_2" value="" >
+                        <input class="playable" type="checkbox" name="5_3" value="" >
+                        <input class="playable" type="checkbox" name="5_4" value="" >
+                        <input class="playable" type="checkbox" name="5_5" value="" >
+                        <input class="playable" type="checkbox" name="5_6" value="" >
+                        <input class="playable" type="checkbox" name="5_7" value="" >
+                        <input class="playable" type="checkbox" name="5_8" value="" >
 
-                </div>
-            </td>
+                    </div>
+                </td>
 
-        </tr>
-        </tbody>
-    </table>
+            </tr>
+            </tbody>
+        </table>
 
-    <h3 class="normal-text" id="txtMessage"></h3>
-
+        <h3 class="normal-text" id="txtMessage"></h3>
+    </div>
     <button class="start-button" id="btnStart">Start!</button>
 </div>
 
@@ -141,7 +143,18 @@
     </div>
 
     <!--Ranking-->
-
+    <div id="dialogRanking" class="window">
+        <span id="btnCloseRanking" class="close">&times;</span>
+        <h1 class="normal-text">Ranking</h1>
+        <table id="tableRanking">
+            <tr>
+                <td class="normal-text"><h3>#</h3></td>
+                <td class="normal-text"><h3>Player</h3></td>
+                <td class="normal-text"><h3>Moves</h3></td>
+            </tr>
+            <!--Content inserted dinamicaly by javascript-->
+        </table>
+    </div>
 
     <!--Config-->
     <div id="dialogConfig" class="window">
@@ -171,5 +184,6 @@
 <script type="text/javascript" src="../javascript_files/rulesMethods.js"></script>
 <script type="text/javascript" src="../javascript_files/configMethods.js"></script>
 <script type="text/javascript" src="../javascript_files/playMethods.js"></script>
+<script type="text/javascript" src="../javascript_files/rankingMethods.js"></script>
 
 </html>
