--- a/WebContent/html_files/PaginaPrincipal.html
+++ b/WebContent/html_files/PaginaPrincipal.html
@@ -146,7 +146,7 @@
     <div id="dialogRanking" class="window">
         <span id="btnCloseRanking" class="close">&times;</span>
         <h1 class="normal-text">Ranking</h1>
-        <table id="tableRanking">
+        <table id="tableRanking" class="table-ranking">
             <tr>
                 <td class="normal-text"><h3>#</h3></td>
                 <td class="normal-text"><h3>Player</h3></td>
